# Classroom-mcp

./: .gitignore  LICENSE  auth.py  check_courses.py  client.py  main.py  pyproject.toml  requirements.txt
